ex_em_ell/tests/snapshots/lists__example_xmls@valid_empty.xml.snap
---
source: ex_em_ell/tests/lists.rs
expression: round_trip
input_file: ex_em_ell/tests/data/lists/valid_empty.xml
---
<?xml version="1.0" encoding="utf-8"?>
<example>
  <children />
</example>
