ex_em_ell/tests/snapshots/lists__example_xmls@valid_multiple.xml.snap
---
source: ex_em_ell/tests/lists.rs
expression: round_trip
input_file: ex_em_ell/tests/data/lists/valid_multiple.xml
---
<?xml version="1.0" encoding="utf-8"?>
<example>
  <children>
    <child>
      <field>value</field>
    </child>
    <child>
      <field>value</field>
    </child>
  </children>
</example>
